[package]
name = "examples"
version = "0.0.3"
authors = ["LittleTitan"]
edition = "2018"

license = "MIT"

[dependencies]

# Event handler
winit = "0.24.0"

# random dependancy
rand = "0.8.3"

# feo engine dependancies
feo-oop-engine = { path = "../feo-oop-engine" }
global-macro-derive = { path = "../feo-oop-engine/global-macro-derive" }

# feo math dependancy
feo-math = { git = "https://github.com/littleTitan/feo-math" }

# macro dependancies
macro_rules_attribute = "0.0.2"

[profile.release]
debug = true
