[package]
name = "examples"
version = "0.0.3"
authors = ["LittleTitan"]
edition = "2018"

license = "MIT"

publish = false

[dependencies]

# Event handler
winit = "0.24.0"

# random dependency
rand = "0.8.3"

# feo engine dependencies
feo-oop-engine = { path = "../feo-oop-engine" }
global-macro-derive = { path = "../feo-oop-engine/global-macro-derive" }

# feo math dependency
feo-math = { git = "https://github.com/littleTitan/feo-math" }

# macro dependencies
macro_rules_attribute = "0.0.2"
