[package]
name = "examples"
description = "Examples for feo-oop-engine"
version = "0.0.3"
authors = ["LittleTitan"]
edition = "2021"

license = "MIT"

publish = false

[dependencies]

# Event handler
winit = "0.24.0"

# random dependency
rand = "0.8.3"

# feo engine dependencies
feo-oop-engine = { path = "../feo-oop-engine" }
feo-oop-engine-proc-macros = { path="../feo-oop-engine-proc-macros" }

# feo math dependency
feo-math = "0.1.0"

# macro dependencies
macro_rules_attribute = "0.0.2"
