[package]
name = "feo-oop-engine"
version = "0.0.3"
authors = ["LittleTitan"]
edition = "2018"

description = "An Object Oriented game engine for rust."
documentation = "https://docs.rs/feo-oop-engine"
repository = "https://github.com/littleTitan/feo-oop-engine"
readme = "../README.md"

keywords = ["gamedev", "graphics", "engine", "game", "oop"]
categories = [
    "game-engines", 
    "game-development", 
    "graphics", 
    "mathematics", # see feo-math
    "rendering", 
    "rendering::engine", 
    "rendering::data-formats",
    "rendering::graphics-api",
    "asynchronous", 
    "command-line-interface",
    "filesystem",
    "parsing"
]

license = "MIT"

[dependencies]

# vulkano dependencies
vulkano = "0.22.0"
vulkano-shaders = "0.22.0"
winit = "0.24.0"
vulkano-win = "0.22.0"

# image io
png = "0.16.8"
image = "0.23.14"

# async and multi threading dependencies
rayon = "1.5.0"
futures = "0.3.12"

# lazy_static dependency
lazy_static = "1.4.0"

# terminal UI dependencies
terminal_size = "0.1.16"
colored = "2.0.0"

# math dependencies
feo-math = { git = "https://github.com/littleTitan/feo-math", version = "0.1.0" }

# macro dependencies
global-macro-derive = { path = "./global-macro-derive", version = "0.1.0"}
child-macro-derive = { path = "./child-macro-derive", version = "0.1.0"}
parent-macro-derive = { path = "./parent-macro-derive", version = "0.1.0"}
scriptable-macro-derive = { path = "./scriptable-macro-derive", version = "0.1.0"}
gameobject-macro-derive = { path = "./gameobject-macro-derive", version = "0.1.0"}
drawable-macro-derive = { path = "./drawable-macro-derive", version = "0.1.0"}
named-macro-derive = { path = "./named-macro-derive", version = "0.1.0"}

