[package]
name = "feo-oop-engine"
version = "0.0.4"
authors = ["LittleTitan"]
edition = "2021"

description = "An Object Oriented game engine for rust."
documentation = "https://docs.rs/feo-oop-engine"
repository = "https://github.com/littleTitan/feo-oop-engine"
readme = "./README.md"

keywords = ["feo", "oop", "game", "engine", "graphics"]
categories = [
    # "accessibility",
    "game-engines", 
    # "game-development", 
    "graphics", 
    # "mathematics", # see feo-math
    "rendering",
    "asynchronous", 
    # "command-line-interface",
    # "parsing",
    "data-structures"
]

license = "MIT"

[dependencies]

# vulkano dependencies
vulkano = "0.22.0"
vulkano-shaders = "0.22.0"
winit = "0.24.0"
vulkano-win = "0.22.0"

# image io
image = { version = "0.24.0", features = ["png", "bmp", "jpeg"] }

# async and multi threading dependencies
rayon = "1.5.0"
futures = "0.3.12"

# lazy_static dependency
lazy_static = "1.4.0"

# terminal UI dependencies
terminal_size = "0.1.16"
colored = "2.0.0"

# math dependencies
feo-math = "0.1.0"

# macro dependencies
feo-oop-engine-proc-macros = { version="0.0.4", features = ["full"] }
